# exact2d-cad

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release-linux.yml  release.yml
apps/exact2d_app/: Cargo.toml
apps/exact2d_app/src/: main.rs
crates/exact2d_algebra/: Cargo.toml
crates/exact2d_algebra/benches/: rational_bench.rs
crates/exact2d_algebra/src/: algebraic.rs  bivariate.rs  lib.rs  rational.rs  univariate.rs
crates/exact2d_boolean/: Cargo.toml
crates/exact2d_boolean/src/: boolean_ops.rs  lib.rs  region.rs  weld.rs
crates/exact2d_boolean/tests/: spec_behavior.rs
crates/exact2d_cad/: Cargo.toml
crates/exact2d_cad/src/: draw.rs  edit.rs  inquiry.rs  lib.rs  selection.rs  snap.rs
crates/exact2d_constraint/: Cargo.toml
crates/exact2d_constraint/src/: constraint.rs  lib.rs  solver.rs
crates/exact2d_constraint/tests/: review_probes.rs
crates/exact2d_document/: Cargo.toml
crates/exact2d_document/src/: dimension.rs  document.rs  entity.rs  layer.rs  lib.rs  properties.rs
crates/exact2d_geometry/: Cargo.toml
crates/exact2d_geometry/src/: curve.rs  lib.rs  nurbs.rs  point.rs  transform.rs
crates/exact2d_geometry/src/ops/: curvature.rs  distance.rs  intersect.rs  mod.rs  offset.rs  split_reverse.rs
crates/exact2d_geometry/src/primitives/: circular_arc.rs  cubic_bezier.rs  elliptical_arc.rs  line_seg.rs  mod.rs  polycurve.rs
crates/exact2d_geometry/tests/: review_probes.rs  spec_behavior.rs
crates/exact2d_integer/: Cargo.toml
crates/exact2d_integer/src/: lib.rs
crates/exact2d_io/: Cargo.toml
crates/exact2d_io/src/: dxf.rs  lib.rs  native.rs  svg.rs
crates/exact2d_io/tests/: review_probes.rs
crates/exact2d_spatial/: Cargo.toml
crates/exact2d_spatial/src/: lib.rs  morton.rs  quadtree.rs
crates/exact2d_spatial/tests/: spec_behavior.rs
crates/exact2d_ui/: Cargo.toml
crates/exact2d_ui/src/: command.rs  history.rs  icons.rs  lib.rs  state.rs  theme.rs  tools.rs  view.rs  view_transform.rs
crates/exact2d_ui/src/state/: constraints.rs  contextual.rs  modify.rs
crates/exact2d_ui/src/view/: chrome.rs  palette.rs  tessellate.rs
crates/exact2d_ui/tests/: modify_tools.rs  review_probes.rs
docs/: constraint-refactor-plan.md
exact2d-cad-v0.3.0-windows-x86_64/: LICENSE  RUN.txt
