[package]
# Licensed under GPL-3.0-or-later (see LICENSE). Not published to crates.io.
publish = false
name = "exact2d_app"
version = "0.6.1"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
exact2d_geometry = { path = "../../crates/exact2d_geometry" }
exact2d_ui       = { path = "../../crates/exact2d_ui" }
# Windowing host for the egui UI. The default (glow) backend draws the egui
# painter viewport; there is no separate GPU renderer.
eframe = "0.29"
