[package]
name = "exact2d_algebra"
version = "0.1.0"
edition = "2021"

[dependencies]
exact2d_integer = { path = "../exact2d_integer" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "rational_bench"
harness = false
