[package]
# Proprietary, all rights reserved — never publish to crates.io.
publish = false
name = "exact2d_boolean"
version = "0.6.0"
edition = "2021"

[dependencies]
exact2d_geometry = { path = "../exact2d_geometry" }
# Shewchuk adaptive-precision geometric predicates (exact orientation sign).
robust = "1"
