[package]
# Proprietary, all rights reserved — never publish to crates.io.
publish = false
name = "exact2d_cad"
version = "0.4.1"
edition = "2021"

[dependencies]
exact2d_algebra  = { path = "../exact2d_algebra" }
exact2d_geometry = { path = "../exact2d_geometry" }
exact2d_document = { path = "../exact2d_document" }
