[package]
# Proprietary, all rights reserved — never publish to crates.io.
publish = false
name = "exact2d_integer"
version = "0.4.0"
edition = "2021"

[dependencies]
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
num-integer = "0.1"
serde = { version = "1", features = ["derive"] }
