[package]
# Proprietary, all rights reserved — never publish to crates.io.
publish = false
name = "exact2d_io"
version = "0.5.0"
edition = "2021"

[dependencies]
exact2d_algebra  = { path = "../exact2d_algebra" }
exact2d_integer  = { path = "../exact2d_integer" }
exact2d_geometry = { path = "../exact2d_geometry" }
exact2d_document = { path = "../exact2d_document" }
