[package]
# Proprietary, all rights reserved — never publish to crates.io.
publish = false
name = "exact2d_ui"
version = "0.4.0"
edition = "2021"

[dependencies]
exact2d_algebra    = { path = "../exact2d_algebra" }
exact2d_geometry   = { path = "../exact2d_geometry" }
exact2d_document   = { path = "../exact2d_document" }
exact2d_cad        = { path = "../exact2d_cad" }
exact2d_io         = { path = "../exact2d_io" }
# egui is backend-agnostic: the view code compiles without a windowing backend.
egui = "0.29"
rfd = "0.14"
